--- a/view/editor/editor.css
+++ b/view/editor/editor.css
@@ -149,6 +149,10 @@ body.view-layout #teacss-layer > .editor-panel > .preview-toolbar > .close-butto
     background: url(assets/miniatures/reasons.jpg) no-repeat;
 }
 
+.teacss-ui .change-type-dialog .combo-item.type-Faq::before  {
+    background: url(assets/miniatures/faq.jpg) no-repeat;
+}
+
 .teacss-ui .change-type-dialog .combo-item.type-Gallery::before  {
     background: url(assets/miniatures/gallery.jpg) no-repeat;
 }
