--- a/public/editor/app/style/editor.css
+++ b/public/editor/app/style/editor.css
@@ -1,85 +1,9 @@
-#teacss-layer {
-  position: absolute;
-}
-.fa-home:before {
-  position: relative;
-  top: 2px;
-  font-size: 22px;
-  color: #71a0d0;
-}
-body.view-layout #beejee_info{
-  display: none;
-}
-
-#beejee_info {
-    display: none;
-}
-
-.preview-toolbar #beejee_info {
-    display: inline-block;
-    color: #aaa;
-    text-decoration: none;
-    margin-left: 10px;
-}
-
-#beejee_info > span {
-    display: block;
-    background: url(../../../assets/images/logo-beejee.jpg) no-repeat 0 50%;
-    width: 30px;
-    height: 30px;
-    text-indent: -999em;
-    vertical-align: middle;
-    display: inline-block;
-    margin-right: 5px;
-}
-
-#beejee_info > p {
-    display: inline-block;
-    vertical-align: middle;
-    text-align: left;
-    font-size: 14px;
-    line-height: 1.2em;
-    font-family: Arial;
-}
-#beejee_info > p span {
-    color: #FF0;
-}
-
-.frame-panel {
-    top: 55px !important;
-}
-
-.preview-toolbar {
-    border-top: 5px solid #71a0d0 !important;
-    border-bottom: none !important;
-    background: #333 !important;
-    padding-left: 8px !important;
-    height: 55px !important;
-    line-height: 50px !important;
-    white-space: nowrap;
-}
-
-@media (max-width: 768px) {
-    .preview-toolbar {
-        font-size: 0.7em !important;
-    }
-}
-
-.preview-toolbar > button {
-    margin: 0px 5px 0 0 !important;
-    vertical-align: middle !important;
-}
-
-body.view-layout #teacss-layer > .editor-panel > .preview-toolbar > .close-button {
-    margin-top: 18px !important;
-}
-
 #logged_info {    
     background: #333;
     border-bottom: 2px solid #777777;
     border-left: 2px solid #777777;
     border-radius: 0 0 0 20px;
-    margin: 0 !important;
+    margin: 0;
     padding: 5px 10px 5px 15px;
     position: fixed;
     right: 0;
@@ -106,147 +30,93 @@ body.view-layout #teacss-layer > .editor-panel > .preview-toolbar > .close-butto
     margin-left: -5px;
 }
 
-.view-layout #logged_info {
-    display: none !important;
+#beejee_info {
+    display: inline-block;
+    color: #aaa;
+    text-decoration: none;
+    margin-left: 0.6em;
 }
 
-.teacss-ui .change-type-dialog .combo-item {
-    width: 133px;
-    height: 100px;
-    border: none;
-    margin: 3px;
-}
-
-.teacss-ui .change-type-dialog .combo-item::before  {
-    content: '';
-    height: 67px;
+#beejee_info > span {
     display: block;
-    box-shadow: 0 0 5px #B8B8B8;
-    margin-bottom: 7px;
+    background: url(../../../assets/images/logo-beejee.jpg) no-repeat 0 50%;
+    background-size: cover;
+    width: 2em;
+    height: 2em;
+    text-indent: -999em;
+    vertical-align: middle;
+    display: inline-block;
+    margin-right: 5px;
 }
 
-.teacss-ui .change-type-dialog .combo-item.type-Cover::before  {
-    background: url(miniatures/cover.jpg) no-repeat;
+#beejee_info > p {
+    display: inline-block;
+    vertical-align: middle;
+    text-align: left;
+    font-size: 0.8em;
+    line-height: 1.2em;
+    font-family: Arial;
+}
+#beejee_info > p span {
+    color: #FF0;
 }
 
-.teacss-ui .change-type-dialog .combo-item.type-Header::before  {
-    background: url(miniatures/header.jpg) no-repeat;
+#preview-toolbar {
+    border-top: 5px solid #71a0d0;
+    background: #333;
+    padding-left: 8px;
+    line-height: 50px;
+    white-space: nowrap;
+    position: fixed;
+    top: 0; left:0; right: 0; 
+    height: 55px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
 }
 
-.teacss-ui .change-type-dialog .combo-item.type-Order::before  {
-    background: url(miniatures/order.jpg) no-repeat;
+#frame-panel {
+    position: fixed;
+    top: 0;
+    left: 0; right: 0;
+    bottom: 0;
+    overflow: hidden;
 }
 
-.teacss-ui .change-type-dialog .combo-item.type-Benefits::before  {
-    background: url(miniatures/benefits.jpg) no-repeat;
+#preview-toolbar + #frame-panel {
+    top: 55px;
 }
 
-.teacss-ui .change-type-dialog .combo-item.type-Services::before  {
-    background: url(miniatures/services.jpg) no-repeat;
+#preview-toolbar button {
+    color: #F2F2F2;
+    cursor: pointer;
+    white-space: nowrap;
+    font-size: 0.8em;
+    outline: none;
+
+    margin: 0px 0.3em 0 0;
+    padding: 0.3em 0.6em;
+    vertical-align: middle;
+
+    border-radius: 0.3em;
+    border: 1px solid #ccc;
+    border-bottom-color: #bbb;
+  
+    box-shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
+    text-shadow: 0 -1px 0 rgba(0,0,0,.25);
+    background: #6296cb;
+    background-image: linear-gradient(top, #71a0d0, #4b87c3);
+    background-repeat: repeat-x;
+    border-color: rgba(0,0,0,0.1) rgba(0,0,0,0.1) rgba(0, 0, 0, 0.25);
 }
 
-.teacss-ui .change-type-dialog .combo-item.type-Reasons::before  {
-    background: url(miniatures/reasons.jpg) no-repeat;
-}
-
-.teacss-ui .change-type-dialog .combo-item.type-Faq::before  {
-    background: url(miniatures/faq.jpg) no-repeat;
-}
-
-.teacss-ui .change-type-dialog .combo-item.type-Gallery::before  {
-    background: url(miniatures/gallery.jpg) no-repeat;
-}
-
-.teacss-ui .change-type-dialog .combo-item.type-Cases::before  {
-    background: url(miniatures/cases.jpg) no-repeat;
-}
-
-.teacss-ui .change-type-dialog .combo-item.type-Stages::before  {
-    background: url(miniatures/stages.jpg) no-repeat;
-}
-
-.teacss-ui .change-type-dialog .combo-item.type-Feedback::before  {
-    background: url(miniatures/feedback.jpg) no-repeat;
-}
-
-.teacss-ui .change-type-dialog .combo-item.type-Map::before  {
-    background: url(miniatures/map.jpg) no-repeat;
-}
-
-.teacss-ui .change-type-dialog .combo-item.type-Logos::before  {
-    background: url(miniatures/logos.jpg) no-repeat;
-}
-
-.teacss-ui .change-type-dialog .combo-item.type-Footer::before  {
-    background: url(miniatures/footer.jpg) no-repeat;
-}
-
-.teacss-ui .change-type-dialog .combo-item.type-Video::before  {
-    background: url(miniatures/video.jpg) no-repeat;
-}
-
-.teacss-ui .change-type-dialog .combo-item.type-TextBlock::before  {
-    background: url(miniatures/textBlock.jpg) no-repeat;
-}
-
-.teacss-ui .change-type-dialog .combo-item.type-Timer::before  {
-    background: url(miniatures/timer.jpg) no-repeat;
-}
-
-.teacss-ui .change-type-dialog .combo-item.type-Numbers::before  {
-    background: url(miniatures/numbers.jpg) no-repeat;
-}
-
-.teacss-ui .change-type-dialog .combo-item.type-StickyMenu::before  {
-    background: url(miniatures/stickyMenu.jpg) no-repeat;
-}
-
-.teacss-ui a.add-button {
-    border-radius: 0;
-}
-
-.preview-toolbar .ui-state-default .ui-icon {
-    background-image: url(../../../assets/images/ui-icons_grey_256x240.png);
-}
-
-.preview-toolbar .ui-state-hover .ui-icon, .preview-toolbar .ui-state-focus .ui-icon {
-    background-image: url(../../../assets/images/ui-icons_white_256x240.png);
-}
-
-.teacss-ui .preview-toolbar button.ui-button {
-  float: none;
-  margin: 8px 5px 0 0;
-  text-align: center;
-  text-decoration: none;
-  cursor: pointer;
-  outline: none;
-  white-space: nowrap;
-  border: 1px solid #ccc;
-  border-bottom-color: #bbb;
-  border-radius: 0.3em !important;
-  -webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
-  -moz-box-shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
-  box-shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
-  color: #F2F2F2;
+#preview-toolbar button:hover {
+  color: #fff;
   text-shadow: 0 -1px 0 rgba(0,0,0,.25);
-  background: #6296cb !important;
-  background-image: -moz-linear-gradient(top, #71a0d0, #4b87c3) !important;
-  background-image: -ms-linear-gradient(top, #71a0d0, #4b87c3) !important;
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#71a0d0), to(#4b87c3)) !important;
-  background-image: -webkit-linear-gradient(top, #71a0d0, #4b87c3) !important;
-  background-image: -o-linear-gradient(top, #71a0d0, #4b87c3) !important;
-  background-image: linear-gradient(top, #71a0d0, #4b87c3) !important;
-  background-repeat: repeat-x;
-  filter: e(%("progid:DXImageTransform.Microsoft.gradient(startColorstr='%d', endColorstr='%d', GradientType=0)",#71a0d0,#4b87c3));
-  border-color: #4b87c3 #4b87c3 #306191;
-  border-color: rgba(0,0,0,0.1) rgba(0,0,0,0.1) rgba(0, 0, 0, 0.25);
-  filter: e(%("progid:DXImageTransform.Microsoft.gradient(enabled = false)"));  
+  background: #71a0d0;
 }
 
-.teacss-ui .preview-toolbar button.ui-button.ui-state-hover  {
-  color: #fff !important;
-  text-shadow: 0 -1px 0 rgba(0,0,0,.25) !important;
-  background: #71a0d0 !important;
+#preview-toolbar button i {
+    margin-right: 0.3em;
 }
 
 .teacss-ui .ui-dialog-titlebar {
@@ -278,87 +148,208 @@ body.view-layout #teacss-layer > .editor-panel > .preview-toolbar > .close-butto
     background-repeat: no-repeat;
 }
 
-.teacss-ui .lp-field-repeater .ui-repeater-item-title {
-    padding: 5px 5px;
-    font-size: 16px;
-    line-height: 16px;
-    display: block;
-    color: #555;
-}
-
-.teacss-ui .lp-field-repeater .ui-repeater-item-title:before {
-    margin-right: 0.4em;
-}
-
-.teacss-ui .lp-field-repeater .ui-repeater-item-title:hover span {
-    text-decoration: underline;
-}
-
-.teacss-ui .lp-field-repeater .ui-repeater-item {
-    margin-bottom: 2px;
-}
-
-.teacss-ui .lp-field-repeater .ui-repeater-item .ui-button {
-    background: transparent !important;
-    border: none;
-    text-align: left;
-}
-
-.teacss-ui .lp-field-repeater .ui-repeater-item .ui-button span {
-    padding: 0;
-}
-
-.teacss-ui .lp-add-field {
-    width: 96px;
-    height: 62px;
-    background: #f5f5f5;
-    border: 1px solid #ddd;
-    margin: 1px;
-    text-align: center;
+.change-type-dialog .combo-item {
     display: inline-block;
-    vertical-align: top;
-    color: #555;
+    width: 143px;
+    height: 110px;
+    border: none;
+    margin: 3px;
+    vertical-align: middle;
 }
 
-.teacss-ui .lp-add-field:before {
-    font-size: 20px;
-    margin: 10px 0 5px;
+.change-type-dialog .combo-item small {
+    display: block;
+    font-size: 0.8em;
+}
+
+.change-type-dialog .combo-item .combo-item-miniature {
+    height: 67px;
+    display: block;
+    box-shadow: 0 0 5px #B8B8B8;
+    margin-bottom: 7px;
+}
+
+.teacss-ui :focus {
+    outline: none;
+}
+
+/* frame styles */
+
+#frame-panel.view-layout *[class^="cmp-"],
+#frame-panel.view-layout *[class*=" cmp-"],
+#frame-panel.view-layout *[class^="lp-"],
+#frame-panel.view-layout *[class*=" lp-"]
+{
+    display: none !important;
+}
+
+#frame-panel.view-layout .editor_text {
+    border: none !important;
+}
+
+
+.cmp-controls {
+    position: absolute;
+    left: 0px; right: 0px;
+    top: 0px; height: 0;
+    display: none;
+}
+
+div:hover > .cmp-controls {
     display: block;
 }
 
-.teacss-ui .lp-add-field:hover {
+.lp-variant-label {
+    font-size: 14px;
+    font-family: "FontAwesome";
+    vertical-align: bottom;
+    line-height: 30px;
+    height: 30px;
+    padding: 0 5px;
+    display: inline-block;
+    background: rgba(255,255,255,0.7);
+    box-sizing: border-box;
+}
+
+.lp-button {
+    vertical-align: bottom;
     background: #eee;
+    border: 1px #ccc solid;
+    width: 30px;
+    height: 30px;
+    line-height: 28px;
+    font-size: 22px;
+    text-align: center;
+    color: black;
+    text-decoration: none;
+    display: inline-block;
+    cursor: pointer;
+    display: inline-block;
+    box-sizing: border-box;
 }
 
-.lp-placemark-repeater .ui-repeater-item {
-    position: relative;
-    border: none;
+.lp-button:hover {
+    color: #777;
 }
 
-.lp-placemark-repeater .ui-repeater-item-title {
+.lp-button.right {
+    float: right;
+}
+
+.cmp-cover {
     position: absolute;
-    right: 0;
-    top: 2px;
-    z-index: 10;
-    border: 1px solid #d3d3d3;
+    left: 0px; right: 0px;
+    top: 0px; bottom: 0px;
+    z-index: 100;
+    background: rgba(0,0,0,0.2);
+    cursor: pointer;
+    opacity: 0;
 }
 
-.lp-placemark-repeater .ui-repeater-item-title {
-    background: none repeat scroll 0 0 #EEEEEE;
-    overflow: hidden;
-    padding: 0.3em 0.2em;
+.cmp-cover.lp-button {
+    right: 5px;
+    top: 5px;
+    left: auto;
+    bottom: auto;
+    opacity: 0;
 }
 
-.lp-placemark-repeater .ui-repeater-item-content,
-.lp-placemark-repeater .ui-repeater-footer
+:hover > .cmp-cover.lp-button,
+.cmp-cover:hover {
+    opacity: 1;
+}
+
+.cmp-cover:not(.lp-button):before {
+    color: white;
+    font-size: 40px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    width: 50px;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+    margin-top: -25px;
+    margin-left: -25px;
+    box-sizing: border-box;
+}
+
+.cmp-add-cover {
+    top: auto; 
+    height: 10px;
+    bottom: -10px;
+}
+
+.cmp-repeater-cover,
+.cmp-repeater-cover:before
 {
-    padding: 0.2em 0;
+    box-sizing: content-box;
+    -webkit-box-sizing: content-box;
+    -moz-box-sizing: content-box;
 }
 
-.lp-placemark-repeater .ui-repeater-footer {
-    border: none;
-    text-align: left;
+.cmp-repeater-cover {
+    bottom: 0;
+    position: absolute;
+    right: -32px;
+    top: 0;
+    vertical-align: middle;
+    width: 40px;
+    padding-left: 10px;
+    box-sizing: border-box;
+    display: none;
+    flex-direction: column;
+    justify-content: center;
 }
-.error{
-    background-color: rgba(255, 0, 0, 0.28);
+
+.cmp-repeater-cover-inline {
+    right: 0px;
+    justify-content: flex-start;
+    z-index: 101;
 }
+
+.cmp-repeater-cover:before {
+    content: "";
+    position: absolute;
+    left: 0; top: 0; bottom: 0;
+    width: 9px;
+    border: 1px solid #ccc;
+    border-left: none;
+    box-sizing: border-box;
+}
+
+.cmp-repeater-cover-inline:before {
+    display: none;
+}
+
+div:hover > .cmp-repeater-cover {
+    display: flex;
+}
+
+.item_block {
+    position: relative;
+}
+
+.item_block:nth-child(1) .cmp-repeater-cover .fa.fa-trash-o.lp-button {
+    display: none;
+}
+
+.text_toolbar {
+    bottom: 100%;
+    left: -1px;
+    position: absolute;
+    z-index: 2001;
+}
+
+.editor_text {
+    min-height: 1em;
+    border: 1px solid transparent;
+}
+
+.editor_text:hover,
+.editor_text:focus
+{
+    border: 1px dashed #f80;
+    outline: none;
+}
+
