--- a/public/editor/app/style/editor.css
+++ b/public/editor/app/style/editor.css
@@ -72,19 +72,11 @@
     height: 55px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;
+    z-index: 100;
 }
 
 #frame-panel {
-    position: fixed;
-    top: 0;
-    left: 0; right: 0;
-    bottom: 0;
-    overflow-x: auto;
-    overflow-y: scroll;
-}
-
-#preview-toolbar + #frame-panel {
-    top: 55px;
+    padding-top: 55px;
 }
 
 #preview-toolbar button {
@@ -149,37 +141,13 @@
     background-repeat: no-repeat;
 }
 
-.change-type-dialog .combo-item {
-    display: inline-block;
-    width: 143px;
-    height: 110px;
-    border: none;
-    margin: 3px;
-    vertical-align: middle;
-}
-
-.change-type-dialog .combo-item small {
-    display: block;
-    font-size: 0.8em;
-}
-
-.change-type-dialog .combo-item .combo-item-miniature {
-    height: 67px;
-    display: block;
-    box-shadow: 0 0 5px #B8B8B8;
-    margin-bottom: 7px;
-}
-
 .teacss-ui :focus {
     outline: none;
 }
 
 /* frame styles */
-
 #frame-panel.view-layout *[class^="cmp-"],
-#frame-panel.view-layout *[class*=" cmp-"],
-#frame-panel.view-layout *[class^="lp-"],
-#frame-panel.view-layout *[class*=" lp-"]
+#frame-panel.view-layout *[class*=" cmp-"]
 {
     display: none !important;
 }
@@ -188,7 +156,11 @@
     border: none !important;
 }
 
-#frame-panel > div {
+#frame-panel > div.lp-block {
+    position: relative;
+}
+
+div.lp-cover {
     position: relative;
 }
 
@@ -199,7 +171,7 @@
     display: none;
 }
 
-div:hover > .cmp-controls {
+div.lp-block:hover > .cmp-controls {
     display: block;
 }
 
@@ -226,7 +198,6 @@ div:hover > .cmp-controls {
     text-align: center;
     color: black;
     text-decoration: none;
-    display: inline-block;
     cursor: pointer;
     display: inline-block;
     box-sizing: border-box;
@@ -355,5 +326,33 @@ div:hover > .cmp-repeater-cover {
 {
     border: 1px dashed #f80;
     outline: none;
+}
+
+.drop-marker {
+    position: relative;
+    z-index: 99;
+}
+
+.drop-marker::before {
+    content: "";
+    top: 0; left: 0;
+    width: 100%; height: 0;
+    border: 4px dashed #f80;
+    box-sizing: border-box;
+    position: absolute;
+    z-index: 99;
+}
+
+.drop-rect {
+    border: 4px solid #f80;
+    background: rgba(255,136,0,0.3);
+    box-sizing: border-box;
+    position: absolute;
+    z-index: 99;
+    opacity: 1;
+    left: 0; right: 0;
+
+    -webkit-transition: top 0.5s, height 0.5s, opacity 0.5s 0.5s;
+    transition: top 0.5s, height 0.5s, opacity 0.5s 0.5s;
 }
 
