--- a/front/editor/style/font-awesome.css
+++ b/front/editor/style/font-awesome.css
@@ -1,10 +1,6 @@
 @font-face {
   font-family: 'FontAwesome';
-  src: url('../../../public/assets/fonts/fontawesome-webfont.eot?v=4.0.3');
-  src: url('../../../public/assets/fonts/fontawesome-webfont.eot?#iefix&v=4.0.3') format('embedded-opentype'), 
-       url('../../../public/assets/fonts/fontawesome-webfont.woff?v=4.0.3') format('woff'), 
-       url('../../../public/assets/fonts/fontawesome-webfont.ttf?v=4.0.3') format('truetype'), 
-       url('../../../public/assets/fonts/fontawesome-webfont.svg?v=4.0.3#fontawesomeregular') format('svg');
+  src: url('../../../public/assets/fonts/fontawesome-webfont.ttf?v=4.0.3') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
